# places

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  generate_pytorch_dep_urls.py  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-image.yml  nighly.yml  ruff.yml  test.yml
docker/: docker-entrypoint.sh  install.sh  run_qdrant.sh  supervisord.conf
docker/config/: production.yaml
firefox/: background.js  manifest.json  options.html  options.js  places.js
places/: apis.py  app.py  blocklist.txt  cli.py  config.py  db.py  extractor.py  index.py  lexrank.py  places_db.py  query.py  scrap.py  utils.py  vector_db.py  vectors.py  web.py  webdb.py
places/backends/: __init__.py  _nuclia.py  _qdrant.py  _vectra.py  vectra.py
places/index/: __init__.py  firefox.py  main.py  sessionbuddy.py
places/static/: places.js  style.css
places/templates/: admin.html  base.html  index.html
places/tests/: test_vectors.py
scripts/: generate_pytorch_dep_urls.py
