[tool.poetry]
name = "places"
version = "0.0.1"
description = "Semantic Search on your Browser History"
homepage = "https://github.com/tarekziade/places"
authors = ["Tarek Ziadé <tarek@ziade.org>"]

[tool.poetry.dependencies]
python = ">= 3.11, < 3.12"

bs4 = "^0.0.1"
sentence-transformers = "^2.2.2"
txtai = "^5.5.1"
numpy = "^1.24.3"
aiohttp = "^3.8.4"
ujson = "^5.7.0"
qdrant-client = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
